--- a/css/main.css
+++ b/css/main.css
@@ -1,181 +1,103 @@
-/*STARTING SCREEN*/
+@import url(https://fonts.googleapis.com/css?family=Permanent+Marker);
 
-.startScreen
-{
-  display: none;
-  width: 75%;
-  height: 525px;
+body {
+  font-family: helvetica, sans-serif;
+  font-size: 16px;
+  background-color: #f5f5f5;
+}
+
+main { text-align: center; }
+
+.mainContainer {
+  width: 1080px;
+  background-color: #fff;
   margin: 0 auto;
+  height: 100%;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  padding: 10px;
+}
+
+#man .cls-1 {
+opacity: 0;
+}
+
+.mainTitle {
+  font-family: 'Architects Daughter', arial, helvetica;
+  font-size: 45px;
+  color: #0b56b9;
+  margin: 20px;
+}
+
+.show-piece {
+  opacity: 1 !important;
+  display: block !important;
+}
+
+h2 {
+  font-family: helvetica, sans-serif;
+  font-size: 22px;
+  font-weight: 400;
+  padding-bottom: 30px;
+}
+
+.cls-1 {
+  fill: none;
+  stroke: #000;
+  stroke-width: 11px;
+  stroke-linecap: round;
+}
+
+#hangmanComplete {
+  margin: 0 auto;
+}
+
+.hangmanSVG {
+  width: 40%;
+}
+
+.reset-screen {
+  display: none;
+  padding-top: 20%;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+.reset-screen button { cursor: pointer; }
+
+.selectedLetter {
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.press-label {
+  font-size: 20px;
+}
+
+input {
+  height: 40px;
+  width: 40px;
+  font-size: 22px;
+}
+
+.overText {
+  font-size: 50px;
+}
+
+.reset-screen button {
   position: relative;
-  background: #0a0a0a;
-  overflow: hidden;
-}
-
-.star-fast {
-  height: 1px;
-  width: 50vh;
-  background: #f4f5f4;
-  position: absolute;
-  top: 5%;
-  left:  100%;
-  -webkit-animation: shootstar-fast 0.8s linear infinite;
-}
-
-.star-fast::before {
-  content: "";
-  height: 1px;
-  width: 50vh;
-  background: #f4f5f4;
-  position: absolute;
-  top: 30vh;
-  right: -150vh;
-
-}
-
-.star-fast::after {
-  content: "";
-  height: 1px;
-  width: 50vh;
-  background: #f4f5f4;
-  position: absolute;
-  top: 80vh;
-  left: -20vh;
-
-}
-
-.star-medium {
-  height: 1px;
-  width: 50vh;
-  left: 100%;
-  position: absolute;
-  top: 10vh;
-  background: #f4f5f4;
-  -webkit-animation: shootstar-med 1s linear infinite
-}
-
-.star-medium::before {
-  content: "";
-  position: absolute;
-  right: 50%;
-  top: 40vh;
-  height: 1px;
-  width: 30vh;
-  background: #f4f5f4;
-}
-
-.star-medium::after {
-  content: "";
-  position: absolute;
-  right: -150%;
-  top: 60vh;
-  height: 1px;
-  width: 30vh;
-  background: #f4f5f4;
-}
-
-.star-slow {
-  position: absolute;
-  top: 30vh;
-  left: 100%;
-  background: #f4f5f4;
-  height: 1px;
-  width: 10vh;
-  -webkit-animation: shootstar-slow 1.3s infinite linear;
-}
-
-.star-slow::before {
-  content: "";
-  position: absolute;
-  right: 20vh;
-  top: 10vh;
-  width: 10vh;
-  height: 1px;
-  background: #f4f5f4;
-}
-
-.star-slow::after {
-  content: "";
-  position: absolute;
-  right: -60vh;
-  top: 30vh;
-  width: 10vh;
-  height: 1px;
-  background: #f4f5f4;
-}
-
-@-webkit-keyframes shootstar-fast {
-  0% {
-    margin-left: 0;
-  }
-  100% {
-    margin-left: -150%;
-  }
-}
-
-@-webkit-keyframes shootstar-med {
-  0% {
-    margin-left: 0;
-  }
-  100% {
-    margin-left: -120%;
-  }
-}
-
-@-webkit-keyframes shootstar-slow {
-  0% {
-    margin-left: 0;
-  }
-  100% {
-    margin-left: -120%;
-  }
-}
-
-.startScreen button
-{
-	background-color: #000;
-	color: #fff;
-	font-size: 1.5em;
-	font-family: 'Coda', Helvetica, Arial, sans-serif;
-	font-weight: 900;
-	letter-spacing: 8px;
-	border: none;
-	display: block;
-	margin-bottom: 20px;
-	margin: 0 auto;
-	margin-top: 40PX;
-}
-
-.htpScreen
-{
-  display: none;
-}
-
-.firstLevelScreen
-{
-  display: none;
-}
-
-.secondLevelScreen
-{
-  display: none;
-}
-
-.thirdLevelScreen
-{
-  display: none;
-}
-
-.losingScreen
-{
-  display: none;
-}
-
-.victoryScreen
-{
-  display: none;
-}
-
-.infoPanel
-{
-  display: none;
+  padding: 10px 40px;
+  margin: 30px 10px 10px 0px;
+  border-radius: 10px;
+  font-family: helvetica, sans-serif;
+  font-size: 25px;
+  color: #FFF;
+  text-decoration: none;
+  background-color: #82BF56;
+  border-bottom: 5px solid #669644;
+  text-shadow: 0px -2px #669644;
 }
